--- a/index.html
+++ b/index.html
@@ -5,16 +5,40 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мои ссылки</title>
   <style>
-    body { font-family: Inter, Arial; display:flex;align-items:center;justify-content:center;
-           min-height:100vh;margin:0;background:#0f172a;color:#fff }
-    .card { width:100%;max-width:420px;padding:28px;border-radius:16px;
-           box-shadow:0 10px 30px rgba(2,6,23,.7);background:linear-gradient(180deg,#0b1220, #071127) }
-    h1{margin:0 0 12px;font-size:22px;text-align:center}
-    .btn{display:block;text-decoration:none;padding:12px 16px;margin:10px 0;border-radius:10px;
-         background:#fff;color:#071127;text-align:center;font-weight:600}
-    .small{font-size:13px;opacity:.8;text-align:center;margin-top:12px}
-  </style>
-</head>
+  body {
+    background: linear-gradient(135deg, #1b2735, #090a0f);
+    color: white;
+    font-family: 'Segoe UI', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+
+  a {
+    color: white;
+    background: rgba(255, 255, 255, 0.1);
+    text-decoration: none;
+    padding: 12px 20px;
+    border-radius: 12px;
+    margin: 8px;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    background: rgba(255, 255, 255, 0.3);
+    transform: scale(1.05);
+  }
+</style> 
+</head
+  
 <body>
   <div class="card">
     <h1>Мои ссылки</h1>
