Remove QR code instruction from index.html
Removed the QR code instruction text from the HTML.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
     <a class="btn" href="https://www.railways.kz/"_blank">Сайт / Портфолио</a>
     
-    <div class="small">Отсканируй QR или перейди по ссылке</div>
+    <div class="small"></div>
   </div>
 </body>
 </html>
