--- a/index.html
+++ b/index.html
@@ -5,38 +5,43 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мои ссылки</title>
   <style>
-  body {
-    background: linear-gradient(135deg, #1b2735, #090a0f);
-    color: white;
-    font-family: 'Segoe UI', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
+    body {
+      /* 🔵 Синий фон с градиентом */
+      background: linear-gradient(135deg, #2193b0, #6dd5ed);
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
 
-  h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
-  }
+    h1 {
+      font-size: 32px;
+      margin-bottom: 30px;
+      letter-spacing: 1px;
+    }
 
-  a {
-    color: white;
-    background: rgba(255, 255, 255, 0.1);
-    text-decoration: none;
-    padding: 12px 20px;
-    border-radius: 12px;
-    margin: 8px;
-    transition: 0.3s;
-  }
+    a {
+      color: white;
+      background: rgba(255, 255, 255, 0.15);
+      text-decoration: none;
+      padding: 14px 28px;
+      border-radius: 14px;
+      margin: 10px;
+      transition: all 0.3s ease;
+      font-size: 18px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
 
-  a:hover {
-    background: rgba(255, 255, 255, 0.3);
-    transform: scale(1.05);
-  }
-</style> 
+    a:hover {
+      background: rgba(255, 255, 255, 0.3);
+      transform: scale(1.07);
+    }
+  </style>
 </head
   
 <body>
