--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a class="btn" href="https://instagram.com/railways.kz" target="_blank">Instagram</a>
     <a class="btn" href="https://www.tiktok.com/@railwayskz" target="_blank">Tik-Tok</a>
     <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
-    <a class="btn" href="https://www.railways.kz/"_blank">Сайт / Портфолио</a>
+    <a class="btn" href="https://www.railways.kz/"_blank">Сайт</a>
     
     <div class="small"></div>
   </div>
