Remove title from index.html
Removed title from the HTML document.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Мои ссылки</title>
+  <title></title>
   <style>
     body {
       /* 🔵 Синий фон с градиентом */
