--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title></title>
+  <meta charset="UTF-8">
+  <title>Мои ссылки</title>
+
   <style>
     body {
-      /* 🔵 Синий фон с градиентом */
-      background: linear-gradient(135deg, #2193b0, #6dd5ed);
+      /* 🔵 Синий градиент */
+      background: linear-gradient(180deg, #2193b0, #6dd5ed);
       color: white;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
+      justify-content: flex-start;
+      min-height: 100vh;
       margin: 0;
+      padding-top: 60px;
       text-align: center;
     }
 
     h1 {
       font-size: 32px;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
       letter-spacing: 1px;
     }
 
@@ -31,32 +32,30 @@
       text-decoration: none;
       padding: 14px 28px;
       border-radius: 14px;
-      margin: 10px;
+      margin: 10px 0;
       transition: all 0.3s ease;
       font-size: 18px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      width: 80%;
+      max-width: 400px;
     }
 
     a:hover {
       background: rgba(255, 255, 255, 0.3);
-      transform: scale(1.07);
+      transform: scale(1.03);
     }
   </style>
-</head
-  
-<body>
-  <div class="card">
-    <h1></h1>
+</head>
 
-    <!-- Замените href на ваши ссылки и текст -->
-    <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
+<body>
+  <h1></h1>
+  <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
     <a class="btn" href="https://www.youtube.com/@railwaysresmi" target="_blank">YouTube</a>
     <a class="btn" href="https://instagram.com/railways.kz" target="_blank">Instagram</a>
     <a class="btn" href="https://www.tiktok.com/@railwayskz" target="_blank">Tik-Tok</a>
     <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
     <a class="btn" href="https://www.railways.kz/"_blank">Сайт</a>
-    
-    <div class="small"></div>
-  </div>
+
 </body>
 </html>
+
