--- a/index.html
+++ b/index.html
@@ -1,61 +1,34 @@
-<!DOCTYPE html>
-<html>
+!doctype html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мои ссылки</title>
-
   <style>
-    body {
-      /* 🔵 Синий градиент */
-      background: linear-gradient(180deg, #2193b0, #6dd5ed);
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      margin: 0;
-      padding-top: 60px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 32px;
-      margin-bottom: 25px;
-      letter-spacing: 1px;
-    }
-
-    a {
-      color: white;
-      background: rgba(255, 255, 255, 0.15);
-      text-decoration: none;
-      padding: 14px 28px;
-      border-radius: 14px;
-      margin: 10px 0;
-      transition: all 0.3s ease;
-      font-size: 18px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      width: 80%;
-      max-width: 400px;
-    }
-
-    a:hover {
-      background: rgba(255, 255, 255, 0.3);
-      transform: scale(1.03);
-    }
+    body { font-family: Inter, Arial; display:flex;align-items:center;justify-content:center;
+           min-height:100vh;margin:0;background:#0f172a;color:#fff }
+    .card { width:100%;max-width:420px;padding:28px;border-radius:16px;
+           box-shadow:0 10px 30px rgba(2,6,23,.7);background:linear-gradient(180deg,#0b1220, #071127) }
+    h1{margin:0 0 12px;font-size:22px;text-align:center}
+    .btn{display:block;text-decoration:none;padding:12px 16px;margin:10px 0;border-radius:10px;
+         background:#fff;color:#071127;text-align:center;font-weight:600}
+    .small{font-size:13px;opacity:.8;text-align:center;margin-top:12px}
   </style>
 </head>
-
 <body>
-  <h1></h1>
-  <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
+  <div class="card">
+    <h1></h1>
+
+    <!-- Замените href на ваши ссылки и текст -->
+    <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
     <a class="btn" href="https://www.youtube.com/@railwaysresmi" target="_blank">YouTube</a>
     <a class="btn" href="https://instagram.com/railways.kz" target="_blank">Instagram</a>
     <a class="btn" href="https://www.tiktok.com/@railwayskz" target="_blank">Tik-Tok</a>
     <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
     <a class="btn" href="https://www.railways.kz/"_blank">Сайт</a>
-
+    
+    <div class=</div>
+  </div>
 </body>
 </html>
 
