--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <a class="btn" href="https://www.tiktok.com/@railwayskz" target="_blank">Tik-Tok</a>
     <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
     <a class="btn" href="https://www.railways.kz/"_blank">Сайт</a>
+    <a class="btn" href="https://ru.pinterest.com/mediaqtzh21/" target="_blank">Pinterest</a>
     
-
   </div>
 </body>
 </html>
