--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Мои ссылки</title>
   <style>
     body { font-family: Inter, Arial; display:flex;align-items:center;justify-content:center;
-           min-height:100vh;margin:0;background:#0f172a;color:#fff }
+           min-height:100vh;margin:0;background:#87ceeb;color:#fff }
     .card { width:100%;max-width:420px;padding:28px;border-radius:16px;
            box-shadow:0 10px 30px rgba(2,6,23,.7);background:linear-gradient(180deg,#0b1220, #071127) }
     h1{margin:0 0 12px;font-size:22px;text-align:center}
