--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Мои ссылки</title>
   <style>
     body { font-family: Inter, Arial; display:flex;align-items:center;justify-content:center;
-           min-height:100vh;margin:0;background:#87ceeb;color:#fff }
+           min-height:100vh;margin:0;background:#00a0e3;color:#b38e15 }
     .card { width:100%;max-width:420px;padding:28px;border-radius:16px;
            box-shadow:0 10px 30px rgba(2,6,23,.7);background:linear-gradient(180deg,#0b1220, #071127) }
     h1{margin:0 0 12px;font-size:22px;text-align:center}
     .btn{display:block;text-decoration:none;padding:12px 16px;margin:10px 0;border-radius:10px;
-         background:#fff;color:#071127;text-align:center;font-weight:600}
+         background:#00a0e3;color:#b38e15;text-align:center;font-weight:600}
     .small{font-size:13px;opacity:.8;text-align:center;margin-top:12px}
   </style>
 </head>
