--- a/index.html
+++ b/index.html
@@ -4,15 +4,47 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мои ссылки</title>
-  <style>
-    body { font-family: Inter, Arial; display:flex;align-items:center;justify-content:center;
-           min-height:100vh;margin:0;background:#00a0e3;color:#b38e15 }
-    .card { width:100%;max-width:420px;padding:28px;border-radius:16px;
-           box-shadow:0 10px 30px rgba(2,6,23,.7);background:linear-gradient(180deg,#0b1220, #071127) }
-    h1{margin:0 0 12px;font-size:22px;text-align:center}
-    .btn{display:block;text-decoration:none;padding:12px 16px;margin:10px 0;border-radius:10px;
-         background:#00a0e3;color:#b38e15;text-align:center;font-weight:600}
-    .small{font-size:13px;opacity:.8;text-align:center;margin-top:12px}
+ <style>
+    body {
+      /* 💛💙 Новый градиент */
+      background: linear-gradient(180deg, #b38e15, #00a0e3);
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      margin: 0;
+      padding-top: 60px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 25px;
+      letter-spacing: 1px;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    a {
+      color: white;
+      background: rgba(255, 255, 255, 0.15);
+      text-decoration: none;
+      padding: 14px 28px;
+      border-radius: 14px;
+      margin: 10px 0;
+      transition: all 0.3s ease;
+      font-size: 18px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+      width: 80%;
+      max-width: 400px;
+    }
+
+    a:hover {
+      background: rgba(255, 255, 255, 0.35);
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
