--- a/index.html
+++ b/index.html
@@ -1,65 +1,68 @@
-
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мои ссылки</title>
- <style>
+  <style>
     body {
-      /* 💛💙 Новый градиент */
-      background: linear-gradient(180deg, #b38e15, #00a0e3);
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Inter, Arial;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       min-height: 100vh;
       margin: 0;
-      padding-top: 60px;
+      background: linear-gradient(to bottom, #b38e15, #00a0e3);
+      color: #fff;
+    }
+    .card {
+      width: 100%;
+      max-width: 420px;
+      padding: 28px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+      background: rgba(15, 23, 42, 0.85);
+      backdrop-filter: blur(8px);
+    }
+    h1 {
+      margin: 0 0 12px;
+      font-size: 22px;
       text-align: center;
     }
-
-    h1 {
-      font-size: 32px;
-      margin-bottom: 25px;
-      letter-spacing: 1px;
-      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    }
-
-    a {
-      color: white;
-      background: rgba(255, 255, 255, 0.15);
+    .btn {
+      display: block;
       text-decoration: none;
-      padding: 14px 28px;
-      border-radius: 14px;
+      padding: 12px 16px;
       margin: 10px 0;
-      transition: all 0.3s ease;
-      font-size: 18px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-      width: 80%;
-      max-width: 400px;
+      border-radius: 10px;
+      background: #fff;
+      color: #071127;
+      text-align: center;
+      font-weight: 600;
+      transition: 0.2s;
     }
-
-    a:hover {
-      background: rgba(255, 255, 255, 0.35);
-      transform: scale(1.05);
+    .btn:hover {
+      background: #e5e5e5;
+      transform: scale(1.03);
+    }
+    .small {
+      font-size: 13px;
+      opacity: 0.8;
+      text-align: center;
+      margin-top: 12px;
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1></h1>
+    <h1>Railways KZ</h1>
 
-    <!-- Замените href на ваши ссылки и текст -->
     <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
     <a class="btn" href="https://www.youtube.com/@railwaysresmi" target="_blank">YouTube</a>
     <a class="btn" href="https://instagram.com/railways.kz" target="_blank">Instagram</a>
     <a class="btn" href="https://www.tiktok.com/@railwayskz" target="_blank">TikTok</a>
-   <a class="btn" href="https://ru.pinterest.com/mediaqtzh21/" target="_blank">Pinterest</a>
-    <a class="btn" href=" https://t.me/PR_KTZh" target="_blank">Релизы</a>
-    <a class="btn" href="https://www.railways.kz/"_blank">Сайт</a>
-    
+    <a class="btn" href="https://ru.pinterest.com/mediaqtzh21/" target="_blank">Pinterest</a>
+    <a class="btn" href="https://t.me/PR_KTZh" target="_blank">Релизы</a>
+    <a class="btn" href="https://www.railways.kz/" target="_blank">Сайт</a>
   </div>
 </body>
 </html>
