--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom, #b38e15, #00a0e3);
-      color: #fff;
+      background: linear-gradient(to bottom, #b38e15);
+      color: #00a0e3;
     }
     .card {
       width: 100%;
