Modify styles for background and text colors
Updated background gradient and text colors for better visibility.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom, #b38e15);
-      color: #00a0e3;
+      background: linear-gradient(to bottom, #b38e15, #00a0e3);
+      color: #fff;
     }
     .card {
       width: 100%;
@@ -35,13 +35,13 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #071127;
+      color: #b38e15;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
     }
     .btn:hover {
-      background: #e5e5e5;
+      background: #00a0e3;
       transform: scale(1.03);
     }
     .small {
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Railways KZ</h1>
+    <h1></h1>
 
     <a class="btn" href="https://t.me/railways_kz" target="_blank">Telegram</a>
     <a class="btn" href="https://www.youtube.com/@railwaysresmi" target="_blank">YouTube</a>
