--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       padding: 12px 16px;
       margin: 10px 0;
       border-radius: 10px;
-      background: #fff;
+      background: #00a0e3;
       color: #b38e15;
       text-align: center;
       font-weight: 600;
