--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       padding: 28px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      background: rgba(15, 23, 42, 0.85);
-      backdrop-filter: blur(8px);
+      background: #b38e15;
     }
     h1 {
       margin: 0 0 12px;
@@ -34,14 +33,14 @@
       padding: 12px 16px;
       margin: 10px 0;
       border-radius: 10px;
-      background: #00a0e3;
-      color: #b38e15;
+      background: #fff;
+      color: #071127;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
     }
     .btn:hover {
-      background: #00a0e3;
+      background: #e5e5e5;
       transform: scale(1.03);
     }
     .small {
