--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom, #b38e15, #00a0e3);
+      background: linear-gradient(to bottom, #fefefe);
       color: #fff;
     }
     .card {
@@ -34,7 +34,7 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #071127;
+      color: #00a0e3;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
