--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom, #fefefe);
+      background: url("https://bilet.railways.kz/assets/default/images/rail.dcdaef15.png") no-repeat center center / cover;
       color: #fff;
     }
     .card {
