--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: url("https://github.com/railwayskz/-/blob/main/rail.dcdaef151.png") no-repeat center center / cover;
+      background: linear-gradient(to bottom, #b38e15, #00a0e3);
       color: #fff;
     }
     .card {
@@ -20,7 +20,8 @@
       padding: 28px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      background: #b38e15;
+      background: rgba(15, 23, 42, 0.85);
+      backdrop-filter: blur(8px);
     }
     h1 {
       margin: 0 0 12px;
@@ -34,7 +35,7 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #00a0e3;
+      color: #071127;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
