--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #071127;
+      color: #b38e15;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
