--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 28px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      background: rgba(15, 23, 42, 0.85);
+      background: #b38e15;
       backdrop-filter: blur(8px);
     }
     h1 {
