--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 28px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      background: #00a0e3;
+      background: #b38e15;
       backdrop-filter: blur(8px);
     }
     h1 {
@@ -35,13 +35,13 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #b38e15;
+      color: #fefefe;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
     }
     .btn:hover {
-      background: #e5e5e5;
+      background: #00a0e3;
       transform: scale(1.03);
     }
     .small {
