--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #fefefe;
+      color: #00a0e3;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
     }
     .btn:hover {
-      background: #00a0e3;
+      background: #e5e5e5;
       transform: scale(1.03);
     }
     .small {
