--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom,#fefefe);
+      background: linear-gradient(to bottom,#b38e15,#00a0e3 );
       color: #fff;
     }
     .card {
