--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(to bottom,#00a0e3 );
+      background: linear-gradient(to bottom,#00a0e3, #b38e15);
       color: #fff;
     }
     .card {
@@ -20,7 +20,7 @@
       padding: 28px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      background: #b38e15;
+      background: ##00a0e3;
       backdrop-filter: blur(8px);
     }
     h1 {
@@ -35,7 +35,7 @@
       margin: 10px 0;
       border-radius: 10px;
       background: #fff;
-      color: #00a0e3;
+      color: #071127;
       text-align: center;
       font-weight: 600;
       transition: 0.2s;
